# TCI-HR-resume-system

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/jd/: jd.txt
data/resumes/: candidate_1.txt  candidate_2.txt  candidate_3.txt  candidate_4.txt
models/: schemas.py
nodes/: hitl.py  jd_parser.py  linkedin_parser.py  profile_merge.py  rank.py  report.py  resume_parser.py  scoring.py
templates/: report.html
utils/: bias_audit.py  doc_reader.py  embeddings.py  llm_client.py  sanitiser.py
